--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,8 @@
-<html>
-	<h1>AJAX Constructed this Form</h1>
-	<form>WTH is an empty selection element?</form>
-</html>
+<h1>Mean Express #2 - Cities</h1>
+
+<form>
+	<select class='cities'></select>
+</form>
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="client.js"></script>
