--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
-<h1>Mean Express #2 - Cities</h1>
+<html>
+	<h1>Mean Express #2 - Cities</h1>
 
-<form>
-	<select class='cities'></select>
-</form>
+	<form>
+		<select class='cities'></select>
+	</form>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="client.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="client.js"></script>
+</html>
